src/k8s/gcp/base/http/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
  labels:
    component: http
spec:
  selector:
    matchLabels:
      component: http
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        component: http
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        ad.datadoghq.com/nginx.check_names: '["nginx"]'
        ad.datadoghq.com/nginx.init_configs: "[{}]"
        ad.datadoghq.com/nginx.instances: '[{"nginx_status_url": "http://%%host%%:8080/nginx_status"}]'
        ad.datadoghq.com/nginx.logs: '[{"source": "nginx", "service": "nginx"}]'
    spec:
      terminationGracePeriodSeconds: 600
      containers:
        - name: http
          # Configure Probes: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
          readinessProbe: &probe
            httpGet:
              path: /healthcheck
              port: 7000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            <<: *probe
          securityContext:
            runAsUser: 1000
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            privileged: false
          image: http
          imagePullPolicy: Always
          command:
            - /go/bin/http
          volumeMounts:
            - mountPath: /configs/http
              name: http-conf
            - mountPath: /configs/shared
              name: shared-conf
            - mountPath: /bin/tools/configs
              name: hc-conf
            - mountPath: /tmp
              name: tmp
          ports:
            - name: http
              containerPort: 7000
      nodeSelector:
        cloud.google.com/private-node: "true"
      volumes:
        - name: http-conf
          configMap:
            name: http-conf
        - name: shared-conf
          configMap:
            name: shared-conf
        - name: hc-conf
          configMap:
            name: hc-conf
        - name: tmp
          emptyDir: {}
