src/k8s/gcp/base/http/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
  annotations:
    cloud.google.com/load-balancer-type: Internal
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
  labels:
    component: http
spec:
  type: LoadBalancer
  selector:
    component: http
  ports:
  - port: 80
    targetPort: 7000
    name: http
    protocol: TCP
